--- a/ExcellenceTests/Properties/Resources.resx
+++ b/ExcellenceTests/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="learningPath" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\learningPath.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="module" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\module.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
